# Image-and-Video-Editing-Software

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.out
